omni/tests/goldens/types/undefined_ident_13.omni
let result13:int = missing13
